assets/css/style.css
@font-face {
	font-family: "Ionicons";
	src: url("../fonts/ionicons/fonts/ionicons.eot?v=2.0.0");
	src: url("../fonts/ionicons/fonts/ionicons.eot?v=2.0.0#iefix") format("embedded-opentype"), url("../fonts/ionicons/fonts/ionicons.ttf?v=2.0.0") format("truetype"), url("../fonts/ionicons/fonts/ionicons.woff?v=2.0.0") format("woff"), url("../fonts/ionicons/fonts/ionicons.svg?v=2.0.0#Ionicons") format("svg");
	font-weight: normal;
	font-style: normal;
}

@font-face {
	font-family: 'FontAwesome';
	src: url("../fonts/fontawesome/fonts/fontawesome-webfont.eot?v=4.7.0");
	src: url("../fonts/fontawesome/fonts/fontawesome-webfont.eot?#iefix&v=4.7.0") format("embedded-opentype"), url("../fonts/fontawesome/fonts/fontawesome-webfont.woff2?v=4.7.0") format("woff2"), url("../fonts/fontawesome/fonts/fontawesome-webfont.woff?v=4.7.0") format("woff"), url("../fonts/fontawesome/fonts/fontawesome-webfont.ttf?v=4.7.0") format("truetype"), url("../fonts/fontawesome/fonts/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular") format("svg");
	font-weight: normal;
	font-style: normal;
}

.menu-iframe {
	position: relative;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
	width: 100%;
	height: 1000px;
}

.top-banner {
	position: absolute;
	left: 25%;
	z-index: 100;
	width: 50%;
	font-family: "Montserrat", Arial, sans-serif;
	color: rgba(255, 255, 255, 0.9);
	text-align: center;
	top: 250px;
	font-size: 20px;
}

.banner-quote {
	font-weight: bold;
	font-style: italic;
}

#underConstruction {
    top: 200px;
	text-align: center;
	padding-top: 20px;
	padding-bottom: 0;
	border-radius: 0;
}

.facebookIFrame {
	min-width: 180px;
	width: 340px;
}

#section-home {
	height: 1550px;
}

@media only screen and (min-device-height: 991px) {	
	.description {
	    font-size: 15px !important;
    }

	.top-header {		
		top: -7.5% !important;
		margin-top: 20% !important;
	}
	
	.header-title {
		color: rgba(255, 255, 255, 0.8);
	}
	
	.hours {
	    font-size: 20px !important;
		margin-top: 0 !important;
		margin-bottom: 0 !important;
	}
}

@media only screen and (min-device-height: 800px) and (max-device-height: 991px) {
	.top-header>.heading {
		font-size: 35px !important;
	}
	
	.description {
	    font-size: 12px !important;
    }

	.top-header {
		margin-top: 5% !important;
		margin-bottom: 15% !important;
	}
	
	.header-title {
		font-size: 25px !important;
		color: rgba(255, 255, 255, 0.8);
	}

	.top-banner {
		position: absolute;
		left: 0;
		z-index: 100;
		width: 100%;
		font-size: 10px;
		color: rgba(255, 255, 255, 0.9);
		text-align: center;
		top: 200px;
	}
}

@media only screen and (max-device-height: 800px) {
	.top-header>.heading {
		font-size: 35px !important;
	}
	
	.description {
	    font-size: 12px !important;
    }

	.top-header {
		margin-top: 10% !important;
		margin-bottom: 25% !important;
	}
	
	.header-title {
		font-size: 20px !important;
		color: rgba(255, 255, 255, 0.8);
	}

	.top-banner {
		position: absolute;
		left: 0;
		z-index: 100;
		width: 100%;
		font-size: 10px;
		color: rgba(255, 255, 255, 0.9);
		text-align: center;
		top: 175px;
	}
	
	#section-home {
		height: 2000px !important;
	}
}

.emailLink {
	color: rgba(255, 255, 255, 0.8);
}

.mouse-wrap,
.scroll-wrap {
	position: absolute;
	bottom: 50px;
	z-index: 3;
	left: 50%;
	-webkit-transform: translateX(-50%);
	-ms-transform: translateX(-50%);
	transform: translateX(-50%);
}

.mouse-wrap.left,
.scroll-wrap.left {
	left: 30px;
	-webkit-transform: translateX(0%);
	-ms-transform: translateX(0%);
	transform: translateX(0%);
}

.mouse {
	width: 30px;
	height: 50px;
	border-radius: 20px;
	border: 2px solid #212529;
	position: absolute;
	top: calc(50% - 30px);
	left: calc(50% - 20px);
}

.mouse:before,
.mouse:after {
	content: "";
	display: block;
	position: absolute;
}


/* Second */

.m-1:before {
	width: 6px;
	height: 6px;
	border-radius: 50%;
	top: 10px;
	left: calc(50% - 3px);
	background: #212529;
	-webkit-animation: m-1-ball 2s cubic-bezier(0.215, 0.61, 0.355, 1) infinite;
	animation: m-1-ball 2s cubic-bezier(0.215, 0.61, 0.355, 1) infinite;
}

@-webkit-keyframes m-1-ball {
	0%,
	65%,
	100% {
		opacity: 0;
	}
	10%,
	40% {
		opacity: 1;
	}
	0% {
		-webkit-transform: translateY(5px) scale(0.7);
		transform: translateY(5px) scale(0.7);
	}
	5% {
		-webkit-transform: scale(0.7);
		transform: scale(0.7);
	}
	15%,
	100% {
		-webkit-transform: scale(1);
		transform: scale(1);
	}
	45%,
	65% {
		-webkit-transform: translateY(24px) scale(0.7);
		transform: translateY(24px) scale(0.7);
	}
}

@keyframes m-1-ball {
	0%,
	65%,
	100% {
		opacity: 0;
	}
	10%,
	40% {
		opacity: 1;
	}
	0% {
		-webkit-transform: translateY(5px) scale(0.7);
		transform: translateY(5px) scale(0.7);
	}
	5% {
		-webkit-transform: scale(0.7);
		transform: scale(0.7);
	}
	15%,
	100% {
		-webkit-transform: scale(1);
		transform: scale(1);
	}
	45%,
	65% {
		-webkit-transform: translateY(24px) scale(0.7);
		transform: translateY(24px) scale(0.7);
	}
}

.scroll-wrap {
	-webkit-transition: .3s all ease-out;
	-o-transition: .3s all ease-out;
	transition: .3s all ease-out;
	bottom: 50px;
	opacity: 1;
	visibility: visible;
}

.scroll-wrap.sleep {
	bottom: 0;
	opacity: 0;
	visibility: hidden;
}

.testimonial_v1 img {
	height: 80px;
}

.testimonial_v1 .heading {
	color: #495057;
	font-size: 18px;
}

.testimonial_v1 .subheading {
	color: rgba(0, 0, 0, 0.4);
}

.testimonial_v1 blockquote {
	font-family: "Crimson Text", Georgia, "Times New Roman", Times, serif;
	line-height: 1.7;
	color: #495057;
}

.testimonial_v1.pb_quote_v1 .mediamedia-body {
	position: relative;
	margin-top: 40px;
}

.testimonial_v1.pb_quote_v1 .quote {
	font-size: 100px;
	font-family: "Crimson Text", Georgia, "Times New Roman", Times, serif;
	color: #adb5bd;
	line-height: 0;
	position: absolute;
	left: 50%;
	top: 0;
	-webkit-transform: translateX(-50%);
	-ms-transform: translateX(-50%);
	transform: translateX(-50%);
}

.testimonial_v1.pb_quote_v2 .media-body {
	position: relative;
}
/* ... */

